[package]
name = "mcp-spider"
version = "0.3.0"
edition = "2021"
description = "Probe MCP endpoints for liveness and tool enumeration"

[dependencies]
tokio     = { version = "1",    features = ["rt-multi-thread", "time", "macros", "sync"] }
reqwest   = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde     = { version = "1",    features = ["derive"] }
serde_json = "1"
csv       = "1"
chrono    = { version = "0.4",  default-features = false, features = ["clock", "serde"] }
clap      = { version = "4",    features = ["derive"] }

[profile.release]
lto           = true
codegen-units = 1
opt-level     = "z"
strip         = true
